reject automatically log files with timestamps only.